@@ -6304,94 +6304,6 @@ dnl The following test should only be run if the above two testsfail.
     ])
   fi
 
-dnl Now check if CMSG_DATA is defined if and only if we have 4.4 BSD
-dnl style struct msghdr members.  If CMSG_DATA isn't defined, then
-dnl we try to figure out what it should be defined to.
-  if test "$ace_cv_lib_4_4bsd_msghdr" = yes; then
-    ACE_CACHE_CHECK([if CMSG_DATA is defined],
-      [ace_cv_lib_cmsg_data],
-      [
-       AC_COMPILE_IFELSE([AC_LANG_PROGRAM(
-         [[
-#ifndef ACE_LACKS_SYS_TYPES_H
-# include <sys/types.h>
-#endif
-#include <sys/socket.h>
-#include <sys/un.h>  /* @@ Is this header necessary? */
-         ]],
-         [[
-           cmsghdr ace_cmsg;
-           void * c = CMSG_DATA (&ace_cmsg);
-         ]])],
-         [
-          ace_cv_lib_cmsg_data=yes
-         ],
-         [
-          ace_cv_lib_cmsg_data=no
-dnl Now check which type of CMSG_DATA #define we need.
-          AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
-#ifndef ACE_LACKS_SYS_TYPES_H
-# include <sys/types.h>
-#endif
-#include <sys/socket.h>
-#include <sys/un.h>
-            ]], [[
-             /* This is sloppy.  Oh well. */
-             unsigned char ace_cmsg_data[0];
-
-             cmsghdr ace_cmsg;
-             ace_cmsg.cmsg_data = ace_cmsg_data;
-            ]])],,[
-             AC_COMPILE_IFELSE([AC_LANG_PROGRAM(
-               [[
-#ifndef ACE_LACKS_SYS_TYPES_H
-# include <sys/types.h>
-#endif
-#include <sys/socket.h>
-#include <sys/un.h>
-               ]],
-               [[
-                /* This is sloppy.  Oh well. */
-                unsigned char ace_cmsg_data[0];
-
-                cmsghdr ace_cmsg;
-                ace_cmsg.__cmsg_data = ace_cmsg_data;
-               ]])],
-               [
-                AC_MSG_ERROR([cmsgmdr member '__cmsg_data[0]' not supported by ACE's CMSG_DATA macro])
-               ],
-               [
-                AC_COMPILE_IFELSE([AC_LANG_PROGRAM(
-                  [[
-#ifndef ACE_LACKS_SYS_TYPES_H
-# include <sys/types.h>
-#endif
-#include <sys/socket.h>
-#include <sys/un.h>
-                  ]],
-                  [[
-                   cmsghdr ace_cmsg;
-                  ]])],
-                  [
-                   AC_CACHE_VAL([ace_cv_lib_cmsg_data_member],
-                                [ace_cv_lib_cmsg_data_member=no])
-                  ],
-                  [
-                   AC_MSG_ERROR([No supported cmsghdr structure exists.  ACE cannot be built without one.])
-                  ])
-               ])
-            ])
-         ])
-      ], ,
-      [
-       AC_DEFINE([ACE_LACKS_CMSG_DATA_MACRO])
-       if test "$ace_cv_lib_cmsg_data_member"=no; then
-         AC_DEFINE([ACE_LACKS_CMSG_DATA_MEMBER])
-       fi
-
-      ])
-  fi dnl test "$ace_cv_lib_4_4bsd_msghdr" = yes
-
 fi dnl End struct msghdr_stuff
 
 dnl
